Bug 1714934 - Populate the 'buttons' field for mouse events synthesized by APZ. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D118418